modules/vpc/route-table.tf
# ============================================
# Public Route Table
# ============================================
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = aws_vpc.main.cidr_block
    gateway_id = "local"
  }

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

# ============================================
# Private Route Table
# ============================================
resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = aws_vpc.main.cidr_block
    gateway_id = "local"
  }

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.nat.id
  }
}

# ============================================
# Database Route Table
# ============================================
resource "aws_route_table" "database_rt" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = aws_vpc.main.cidr_block
    gateway_id = "local"
  }
}

resource "aws_route_table_association" "private_1" {
  subnet_id = aws_subnet.private_az_1.id

  route_table_id = aws_route_table.private_rt.id
}

resource "aws_route_table_association" "private_2" {
  subnet_id = aws_subnet.private_az_2.id

  route_table_id = aws_route_table.private_rt.id
}

resource "aws_route_table_association" "public_1" {
  subnet_id = aws_subnet.public_az_1.id

  route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "public_2" {
  subnet_id = aws_subnet.public_az_2.id

  route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "database_1" {
  subnet_id = aws_subnet.database_az_1.id

  route_table_id = aws_route_table.database_rt.id
}

resource "aws_route_table_association" "database_2" {
  subnet_id = aws_subnet.database_az_2.id

  route_table_id = aws_route_table.database_rt.id
}
